package com.torneotenis.torneo_tenis.model.enums;

public enum Categoria {
    ATP_250,
    ATP_500,
    MASTERS_1000,
    GRAND_SLAM
}