package com.torneotenis.torneo_tenis.model.enums;

public enum EstadoPartido {
    PROGRAMADO,
    EN_CURSO,
    FINALIZADO,
    CANCELADO
}