package com.torneotenis.torneo_tenis.model.enums;

public enum Ronda {
    PRIMERA,
    SEGUNDA,
    TERCERA,
    OCTAVOS,
    CUARTOS,
    SEMIFINAL,
    FINAL
}