package com.torneotenis.torneo_tenis.model.enums;

public enum Superficie {
    ARCILLA,    // Roland Garros
    CESPED,     // Wimbledon
    DURA,       // US Open, Australian Open
    INDOOR      // Torneos bajo techo
}