package com.torneotenis.torneo_tenis.repository;

import com.torneotenis.torneo_tenis.model.Arbitro;
import org.springframework.data.jpa.repository.JpaRepository;

public interface ArbitroRepository extends JpaRepository<Arbitro, Integer> {
}