package com.torneotenis.torneo_tenis.service.strategy;

public interface EstrategiaPuntos {
    int calcularPuntos();
}