package com.torneotenis.torneo_tenis.service.strategy;

public class PuntosRondaPrimera implements EstrategiaPuntos {
    @Override
    public int calcularPuntos() {
        return 5;
    }
}